refactor(Room): changes the data structure that stores animals and adapts related methods